# Moling-Novel-writer

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tauri.conf.json  tauri.config.json
.github/workflows/: build.yml
.pnpm-store/v10/index/00/: e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6fa-glob-parent@5.1.2.json
.pnpm-store/v10/index/05/: 1ed5bc30951cefaadb10445ac9314ba0c9135a919dbec3c7352ba206fbd425-semver@6.3.1.json
.pnpm-store/v10/index/08/: 639f389a968e0daa5bf31beb336c0e6faee6f150f03c577db334f73ebda796-@babel+core@7.29.0.json  7394cbb9aede56c3ea8e8b24b7e59698e4ce11d7481957f01f7ea8f75d52c2-zustand@4.5.7.json  dcfb7c76c0a73d59ca186aef78ed1a7f49aa034457f9485a74e7528ea1eae8-@tauri-apps+cli-linux-x64-musl@2.11.0.json
.pnpm-store/v10/index/09/: e87eee8c79a9eecb26e2c7a18d1f7a1de91ee5031c071151ec8bd95620859c-binary-extensions@2.3.0.json
.pnpm-store/v10/index/0e/: 1b939af656bb1e07d543a758c077b24d2c6da0953a84198eff2ed6b0e84d5d-sucrase@3.35.1.json
.trae/documents/: PRD.md  PROJECT_RULES.md  TechnicalArchitecture.md
.trae/specs/redesign-ui/: checklist.md  spec.md  tasks.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Dashboard/: CreateNovelModal.tsx  NovelCard.tsx
src/components/Layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/hooks/: useAIStore.ts  useNovelStore.ts
src/pages/: CharacterWorkshop.tsx  Dashboard.tsx  Editor.tsx  IdeaLab.tsx  Settings.tsx  WorldBuilder.tsx
src/types/: index.ts
src/utils/: aiService.ts  storage.ts
(+142 files in other folders)
