[package]
name = "moling"
version = "1.0.0"
description = "AI小说创作助手"
authors = ["Moling Team"]
license = "MIT"
edition = "2021"

[package.metadata]
productName = "墨灵"
version = "1.0.0"
identifier = "com.moling.novel"

[[bin]]
name = "moling"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2" }
